syntax = "proto3";

option csharp_namespace = "GrpcService";

package user;

// ユーザーサービスの定義
service UserService {
  // ユーザー一覧取得
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  
  // 特定ユーザー取得
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  
  // ユーザー作成
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  
  // ユーザー更新
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  
  // ユーザー削除
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// ユーザーメッセージ
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  bool is_active = 5;
}

// リクエスト・レスポンスメッセージ
message GetUsersRequest {
  // 空のリクエスト
}

message GetUsersResponse {
  repeated User users = 1;
  bool success = 2;
  string message = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}